# twm-session-logout

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_command  main.c  main.cpp  twm-session-logout.cbp  twm-session-logout.depend
src/: MainWindow.cpp  MainWindow.h  main.cpp
